required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (5.3-dev, SVN trunk):
------------------------------------

- Fixed msOGRGetValues function to return default values if the object 
  type is not TEXT. (#2311)

- Fix for the access violation caused by msMSSQL2008LayerGetShape (#2795)

- Fixed msMSSQL2008LayerGetItems to retrieve the column names properly (#2791)

- Prevent from calling msMSSQL2008CloseConnection from msMSSQL2008LayerClose
  causing memory corruption issues (#2790) 

- new polygon label placement algorithm (#2793)

- stop drawing an artificial outline around polygons to ensure
  continuity - users needing this feature will have to explicitely
  add an outlinecolor of the same color as the fill color

- added formatoption QUANTIZE_NEW to force going through the pngquant 
  quantization algorithm instead of the GD one for imagemode RGB (the 
  GD one can be kind of buggy)

- fix some integer rounding errors in the agg line offseter (#2659)

- fix a bug with shapes with duplicate end points. was causing nans
  in the angle follow placement code (#2695)

- refactor msGetLabelSizeEx (now merged with msGetLabelSize) (#2390)

- native label size computation for AGG when using angle follow (#2357)

- memory leak in msInsertLayer, from Ned Harding (#2784)

- label size computation refactoring (#2390)

- don't draw label background if we're using angle follow. (#2726)

- legend keyimage resampling with agg (#2715)

- tileindexed rasters when DATA is manipulated via mapscript work (#2783)

- styleObj width now supports attribute binding

- RFC40 implementation: label text wrapping and alignment (#2383)

- baseline adjustment for multiline labels (#1449)
